# AI-SQL-ASSISTANT

./: README.md  User_Interface.py  app.py  company_langchain_demo.db  embedding.py  main.py  pizzahut.db  pyproject.toml
