[project]
name = "ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langsmith>=0.8.9",
    "openai-whisper>=20250625",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "streamlit-mic-recorder>=0.0.8",
]
